--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h1,
+h2,
+h3,
+p,
+a,
+button {
+  font-family: "Inter", "Open Sans", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  // font-weight: lighter;
+}
+
+.transition {
+  transition: 0.2s;
+  -moz-transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
+.back-button {
+  max-width: 60vw;
+  margin-left: 20vw;
+  margin-bottom: 3rem;
+}
+
+.main-background {
+  background: linear-gradient(180deg, #4440ea 0%, #465cd0 0.01%, #b29eec 100%);
+}
